--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -19,7 +19,7 @@
                <MudNavLink Href="/employees" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
                <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings"  Expanded="true">
                    <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
-                   <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Tag"  Href="/settings/tags">Tags</MudNavLink>
+                    <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Tag" Href="/settings/tags">Tags</MudNavLink>
                </MudNavGroup>
            </MudNavMenu>
         </MudPaper>
