--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Sections
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
@@ -11,5 +12,6 @@
 @using MudBlazor
 @using MRA.AssetsManagement.Web.Client.Shared
 @using AssetsManagement.Web.Client.Services.AssetTypes
+@using AssetsManagement.Web.Client.Services.Tags
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
