--- a/src/Web/Client/Shared/SettingsLayout.razor
+++ b/src/Web/Client/Shared/SettingsLayout.razor
@@ -1,28 +1,11 @@
+@using MRA.AssetsManagement.Web.Client.Shared.MenuItems
 @inherits LayoutComponentBase
 @layout MainLayout
-@inject IAssetTypesService AssetTypesService
+
 <MudGrid>
     <MudItem md="3">
         <MudPaper Class="pa-2">
-            <MudStack Spacing="4">
-                <MudStack Row="true">
-                    <MudTextField @bind-Value="@_normalText" Label="Search" Margin="Margin.Dense" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" />
-                    <SectionOutlet SectionName="new-button" />
-                </MudStack>
-                <MudDivider />
-                <MudNavMenu Style="overflow: auto; height: 72vh" Bordered="true">
-                    @if (AssetTypesService.MenuItems == null)
-                    {
-                        <MudSkeleton Animation="Animation.Wave" />
-                        <MudSkeleton Animation="Animation.Wave" />
-                        <MudSkeleton Animation="Animation.Wave" />
-                    }
-                    else
-                    {
-                       <SectionOutlet SectionName="menu-items" />
-                    }
-                </MudNavMenu>
-            </MudStack>
+            <SectionOutlet SectionName="@nameof(MenuItemList)" />
         </MudPaper>
     </MudItem>
     <MudItem md="9">
@@ -31,13 +14,3 @@
         </MudPaper>
     </MudItem>
 </MudGrid>
-
-
-
-
-
-
-
-@code {
-    string _normalText = "";
-}
