--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -3,8 +3,10 @@
 @using MRA.AssetsManagement.Web.Shared.AssetTypes
 @using MRA.AssetsManagement.Web.Client.Common.Extensions
 @using MRA.AssetsManagement.Web.Client.Shared.MenuItems
+@using MenuItem = MRA.AssetsManagement.Web.Client.Shared.MenuItems.MenuItem
 @layout SettingsLayout
 @inject IAssetTypesService AssetTypesService;
+@inject IMenuItemService MenuItemService;
 
 <PageTitle>Asset Types</PageTitle>
 
@@ -108,6 +110,7 @@
         if (Id is not null)
         {
             await AssetTypesService.Update(_getAssetType);
+           MenuItemService.OnChangeMenuItem(MenuItemEvent.Update, _getAssetType.ToMenuItem());
         }
         else
         {
@@ -120,6 +123,8 @@
 
             await AssetTypesService.Create(newAssetType);
             _getAssetType = new GetAssetType();
+            MenuItemService.OnChangeMenuItem(MenuItemEvent.Update, _getAssetType.ToMenuItem());
+
         }
         StateHasChanged();
     }
