--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -2,8 +2,7 @@
 @page "/settings/asset-types/{id}"
 @using MRA.AssetsManagement.Web.Shared.AssetTypes
 @using MRA.AssetsManagement.Web.Client.Common.Extensions
-@using MRA.AssetsManagement.Web.Client.Shared.MenuItems
-@using MenuItem = MRA.AssetsManagement.Web.Client.Shared.MenuItems.MenuItem
+@using MRA.AssetsManagement.Web.Client.Components.MenuItems
 @layout SettingsLayout
 @inject IAssetTypesService AssetTypesService;
 @inject IMenuItemService MenuItemService;
