--- a/src/Web/Client/Shared/SettingsLayout.razor
+++ b/src/Web/Client/Shared/SettingsLayout.razor
@@ -1,4 +1,4 @@
-@using MRA.AssetsManagement.Web.Client.Shared.MenuItems
+@using MRA.AssetsManagement.Web.Client.Components.MenuItems
 @inherits LayoutComponentBase
 @layout MainLayout
 
