--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -4,6 +4,7 @@
 @using MRA.AssetsManagement.Web.Client.Common.Extensions
 @layout SettingsLayout
 @inject IAssetTypesService AssetTypesService
+@inject IconService
 @inject ISnackbar Snackbar
 
 <PageTitle>Asset Types</PageTitle>
