--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -13,3 +13,5 @@
 @using AssetsManagement.Web.Client.Services.AssetTypes
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
+@using MRA.AssetsManagement.Web.Client.Services.Icons
+@using MRA.AssetsManagement.Web.Client.Common.Extensions
