--- a/src/Web/Client/Components/MenuItems/MenuItemList.razor
+++ b/src/Web/Client/Components/MenuItems/MenuItemList.razor
@@ -1,6 +1,5 @@
 ﻿@inject IMenuItemService MenuItemService;
 @implements IDisposable;
-@inject NavigationManager MyNavigationManager
 
 <MudStack Spacing="4">
     <MudStack Row="true">
@@ -11,9 +10,18 @@
     <MudNavMenu Bordered="true">
         @if (_loading)
         {
-            <MudSkeleton Animation="Animation.Wave"/>
-            <MudSkeleton Animation="Animation.Wave"/>
-            <MudSkeleton Animation="Animation.Wave"/>
+            <MudStack Row=true>
+                <MudSkeleton Style="flex-shrink: 0;" Width="40px" Animation="Animation.Wave" />
+                <MudSkeleton Width="100%" Height="67px" Animation="Animation.Wave" />
+            </MudStack>
+            <MudStack Row=true>
+                <MudSkeleton Style="flex-shrink: 0;" Width="40px" Animation="Animation.Wave" />
+                <MudSkeleton Width="100%" Height="67px" Animation="Animation.Wave" />
+            </MudStack>
+            <MudStack Row=true>
+                <MudSkeleton Style="flex-shrink: 0;" Width="40px" Animation="Animation.Wave" />
+                <MudSkeleton Width="100%" Height="67px" Animation="Animation.Wave" />
+            </MudStack>
         }
         else
         {
@@ -38,22 +46,23 @@
 
     List<MenuItem> MenuItems { get; set; } = new();
     [Parameter] public required IFetchMenuItemService Service { get; set; }
+    [Parameter] public required string Route { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        _loading = false;
-        _hrefUrl = new Uri(MyNavigationManager.Uri).AbsolutePath;
+        _loading = true;
+        _hrefUrl = Route;
         MenuItems = await Service.Fetch();
         MenuItemService.Changed += OnChanged;
-        _loading = true;
-    }
+        _loading = false;
+    }   
 
-    private async void OnChanged(MenuItemEvent menuItemEvent, MenuItem menuItem)
+    private void OnChanged(MenuItemEvent menuItemEvent, MenuItem menuItem)
     {
         switch (menuItemEvent)
         {
             case MenuItemEvent.Add:
-                MenuItems = await Service.Fetch();
+                MenuItems.Add(menuItem);
                 break;
             case MenuItemEvent.Update:
                 int index = MenuItems.FindIndex(item => item.Id == menuItem.Id);
