--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -68,7 +68,7 @@
     </MudForm>
 </MudStack>
 <SectionContent SectionName="@nameof(MenuItemList)">
-    <MenuItemList Service="AssetTypesService" Route="/settings/asset-types" />
+    <MenuItemList Service="AssetTypesService" BaseRoute="/settings/asset-types" />
 </SectionContent>
 
 
