--- a/src/Web/Client/Pages/Settings/Tags.razor
+++ b/src/Web/Client/Pages/Settings/Tags.razor
@@ -43,7 +43,7 @@
     </MudForm>
 </MudStack>
 <SectionContent SectionName="@nameof(MenuItemList)">
-    <MenuItemList Service="TagsService" Route="/settings/tags" />
+    <MenuItemList Service="TagsService" BaseRoute="/settings/tags" />
 </SectionContent>
 
 @code {
