--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -14,14 +14,15 @@
         <MudText Typo="Typo.h4">Asset type</MudText>
         <MudStack Class="mb-3" Row="true">
             <MudButton Variant="Variant.Filled" @onclick=CreateOrUpdate Disabled="_getAssetType.Archived" StartIcon="@Icons.Material.Filled.Save" Color="Color.Tertiary" Size="Size.Medium">Save</MudButton>
-            @if (_getAssetType.Archived)
-            {
-                <MudButton Variant="Variant.Filled" @onclick="ArchiveOrRestore" Disabled=@(string.IsNullOrEmpty(Id) ? true : false) StartIcon="@Icons.Material.Filled.Archive" Color="Color.Secondary" Size="Size.Medium">Restore</MudButton>
-            }
-            else
-            {
-                <MudButton Variant="Variant.Filled" @onclick="ArchiveOrRestore" Disabled=@(string.IsNullOrEmpty(Id) ? true : false) StartIcon="@Icons.Material.Filled.Unarchive" Color="Color.Secondary" Size="Size.Medium">Archive</MudButton>
-            }
+            <MudButton 
+                Variant="Variant.Filled" 
+                @onclick="ArchiveOrRestore" 
+                Disabled="@string.IsNullOrEmpty(Id)" 
+                StartIcon="@(_getAssetType.Archived ? Icons.Material.Filled.Unarchive : Icons.Material.Filled.Archive)" 
+                Color="Color.Secondary" 
+                Size="Size.Medium">
+                @( _getAssetType.Archived ? "Restore" : "Archive")
+            </MudButton>
         </MudStack>
     </MudStack>
 
@@ -45,19 +46,19 @@
             <MudSelect @bind-Value="_getAssetType.Icon" Immediate=true Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
                 <MudSelectItem Value="@(Icons.Material.Outlined.Computer)">
                     <div class="d-flex">
-                        <MudIcon Icon="@Icons.Material.Outlined.Computer" Class="mr-1" />
+                        <MudIcon Icon="@Icons.Material.Outlined.Computer" Class="mr-1"/>
                         <span>Computer</span>
                     </div>
                 </MudSelectItem>
                 <MudSelectItem Value="@(Icons.Material.Outlined.LaptopMac)">
                     <div class="d-flex">
-                        <MudIcon Icon="@Icons.Material.Outlined.LaptopMac" Class="mr-1" />
+                        <MudIcon Icon="@Icons.Material.Outlined.LaptopMac" Class="mr-1"/>
                         <span>Laptop</span>
                     </div>
                 </MudSelectItem>
                 <MudSelectItem Value="@(Icons.Material.Outlined.DesktopWindows)">
                     <div class="d-flex">
-                        <MudIcon Icon="@Icons.Material.Outlined.DesktopWindows" Class="mr-1" />
+                        <MudIcon Icon="@Icons.Material.Outlined.DesktopWindows" Class="mr-1"/>
                         <span>Monitor</span>
                     </div>
                 </MudSelectItem>
@@ -67,7 +68,7 @@
     </MudForm>
 </MudStack>
 <SectionContent SectionName="@nameof(MenuItemList)">
-    <MenuItemList Service="AssetTypesService" BaseRoute="/settings/asset-types" />
+    <MenuItemList Service="AssetTypesService" BaseRoute="/settings/asset-types"/>
 </SectionContent>
 
 
@@ -121,7 +122,6 @@
 
             _getAssetType = await AssetTypesService.Create(newAssetType);
             MenuItemService.OnChangeMenuItem(MenuItemEvent.Add, _getAssetType.ToMenuItem());
-
         }
         StateHasChanged();
     }
@@ -130,6 +130,7 @@
     {
         _getAssetType.Archived = !_getAssetType.Archived;
         await AssetTypesService.Update(_getAssetType);
+        MenuItemService.OnChangeMenuItem(MenuItemEvent.Update, _getAssetType.ToMenuItem());
     }
 
 }
