--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -15,3 +15,4 @@
 @using System.ComponentModel.DataAnnotations
 @using MRA.AssetsManagement.Web.Client.Services.Icons
 @using MRA.AssetsManagement.Web.Client.Common.Extensions
+@using MRA.AssetsManagement.Web.Shared.AssetTypes
