--- a/src/Web/Client/Pages/Settings/Tags.razor
+++ b/src/Web/Client/Pages/Settings/Tags.razor
@@ -36,8 +36,6 @@
                                 PickerVariant="PickerVariant.Inline" Margin=Margin.Dense Variant=Variant.Outlined
                                 ColorPickerView="ColorPickerView.Spectrum" DisableInputs=true />
                 <MudPaper Class="mb-3 mr-3" Style="@($"background-color: {_getTag.Color}; position:absolute; right: 0")" Width="25px" Height="25px"></MudPaper>
-
-
             </MudStack>
         }
 
@@ -52,7 +50,7 @@
     public string? Id { get; set; }
 
     const string TagsUrl = "/settings/tags";
-    
+
     GetTag _getTag = new GetTag();
     bool _loading = false;
 
@@ -87,6 +85,7 @@
 
             _getTag = await TagsService.Create(newTag);
             MenuItemService.OnChangeMenuItem(MenuItemEvent.Add, _getTag.ToMenuItem());
+            _getTag = new GetTag();
         }
         StateHasChanged();
     }
